@@ -6,7 +6,7 @@ services:
 language: go
 
 go:
-  - 1.6.2
+  - 1.7
 
 # Make sure project can also be built on travis for clones of the repo
 go_import_path: github.com/elastic/beats
