@@ -1,4 +1,4 @@
-FROM golang:1.6.2
+FROM golang:1.7
 MAINTAINER Nicolas Ruflin <ruflin@elastic.co>
 
 RUN set -x && \
