@@ -6,7 +6,7 @@ The Beat generator enables you to create your own Beat in a few steps.
 [float]
 === Requirements
 
-To create your own Beat, you must have Golang 1.6.2 or later installed, and the `$GOPATH`
+To create your own Beat, you must have Golang 1.7 or later installed, and the `$GOPATH`
 must be set up correctly. In addition, the following tools are quired:
 
 * https://www.python.org/downloads/[python]
